--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <span class="date">4 days ago</span>
             <h2>Post one</h2>
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cumque nihil quaerat iste sed obcaecati!<br>quisquam ipsam? Lorem ipsum dolor sit amet consectetur adipisicing elit.nihil quaerat iste sed obcaecati!<br>quisquam Lorem ipsum dolor sit
-                amet consectetur, adipisicing elit. Ut mollitia veniam consectetur
+                amet consectetur, adipisicing elit.
             </p>
         </div>
         <div class="card-stats">
